<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_shape"
    android:backgroundTint="@color/white"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:behavior_skipCollapsed="true"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <ImageView
        android:id="@+id/remove_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/boy"
        android:src="@drawable/bottom_sheet_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/boy"
        android:src="@drawable/close_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/remove_sheet" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/choose_the_region"
        android:fontFamily="@font/mulish_bold"
        android:paddingTop="3dp"
        android:text="@string/choose_the_region"
        android:textColor="#403A64"
        android:textFontWeight="700"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/remove_sheet"
        tools:targetApi="28" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnClose">

        <TextView
            android:id="@+id/bishek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mulish"
            android:text="@string/bishkek"
            android:textColor="#403A64"
            android:textFontWeight="500"
            android:textSize="16sp"
            tools:targetApi="28" />

        <TextView
            android:id="@+id/chuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/mulish"
            android:text="@string/chuy"
            android:textColor="#403A64"
            android:textFontWeight="500"
            android:textSize="16sp"
            tools:targetApi="28" />

        <TextView
            android:id="@+id/issyKol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/mulish"
            android:text="@string/issyk_kol"
            android:textColor="#403A64"
            android:textFontWeight="500"
            android:textSize="16sp"
            tools:targetApi="28" />

        <TextView
            android:id="@+id/talas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/mulish"
            android:text="@string/talas"
            android:textColor="#403A64"
            android:textFontWeight="500"
            android:textSize="16sp"
            tools:targetApi="28" />

        <TextView
            android:id="@+id/naryn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/mulish"
            android:text="@string/naryn"
            android:textColor="#403A64"
            android:textFontWeight="500"
            android:textSize="16sp"
            tools:targetApi="28" />

        <TextView
            android:id="@+id/osh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/mulish"
            android:text="@string/osh"
            android:textColor="#403A64"
            android:textFontWeight="500"
            android:textSize="16sp"
            tools:targetApi="28" />

        <TextView
            android:id="@+id/dzalalAbad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/mulish"
            android:text="@string/zhalal_abad"
            android:textColor="#403A64"
            android:textFontWeight="500"
            android:textSize="16sp"
            tools:targetApi="28" />

        <TextView
            android:id="@+id/batken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="70dp"
            android:fontFamily="@font/mulish"
            android:text="@string/batken"
            android:textColor="#403A64"
            android:textFontWeight="500"
            android:textSize="16sp"
            tools:targetApi="28" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>